tests/error/comptime/compare_pointers_null2.bz
// error: comparing a null and a non-null pointer
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let i = 0;
		let p: ?*i32 = null;
		p < &i;
	});
}
